@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2004-2007 by Konstantin V. Arkhipov, Sveta A. Smirnova  *
+ *   Copyright (C) 2004-2008 by Konstantin V. Arkhipov, Sveta A. Smirnova  *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -24,24 +24,30 @@
 			
 			return $this;
 		}
-
+		
 		public function import($scope)
 		{
 			if (!BasePrimitive::import($scope))
 				return null;
-
-			if (is_string($scope[$this->name]) && !empty($scope[$this->name])
-				&& !($this->max && mb_strlen($scope[$this->name]) > $this->max)
-				&& !($this->min && mb_strlen($scope[$this->name]) < $this->min)
-				&& (!$this->pattern || preg_match($this->pattern, $scope[$this->name]))
+			
+			$this->value = (string) $scope[$this->name];
+			
+			$this->selfFilter();
+			
+			if (
+				is_string($this->value)
+				// zero is quite special value here
+				&& ($this->value === '0' || !empty($this->value))
+				&& ($length = mb_strlen($this->value))
+				&& !($this->max && $length > $this->max)
+				&& !($this->min && $length < $this->min)
+				&& (!$this->pattern || preg_match($this->pattern, $this->value))
 			) {
-				$this->value = (string) $scope[$this->name];
-				
-				$this->selfFilter();
-
 				return true;
+			} else {
+				$this->value = null;
 			}
-
+			
 			return false;
 		}
 	}
